syntax = "proto3";


service DIDASchedulerServerService {
    rpc RcvClientRequest(DIDAClientRequest) returns (DIDAEmptyReply);
    rpc RcvPopulateData(DIDAPopData) returns (DIDAEmptyReply);
}

message DIDAPopData {
    repeated string data = 1;
}

message DIDAClientRequest {
    string input = 1; 
    repeated string commands = 2;        
}

message DIDAEmptyReply {

}